Implement rule ExpressionFunctionReturnsUnit
This rule suggests to use block statements for function when the return type is of type Unit.

--- a/detekt-core/src/main/resources/default-detekt-config.yml
+++ b/detekt-core/src/main/resources/default-detekt-config.yml
@@ -440,6 +440,9 @@ potential-bugs:
     active: true
   ExplicitGarbageCollectionCall:
     active: true
+  ExpressionFunctionReturnsUnit:
+    active: false
+    allowExplicitReturnType: false
   HasPlatformType:
     active: false
   IgnoredReturnValue:
